@@ -1,6 +1,7 @@
 2010-05-30 Homer Xing <homer.xing@gmail.com>
 
     * Add a preference menuitem to choose default pane.
+    * Re-enable Oracle repository.
 
 2010-05-29 QI Chengjie <starboy.qi@gmail.com>
 
